Make sure non-visible focused elements are not visibly focused

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ ul {
   padding-left: 0;
 }
 
-*:focus {
+*:focus:not([tabindex="-1"]) {
   outline: none;
-  box-shadow: 0 0 0 4px magenta;
+  box-shadow: 0 0 0 3px lightblue;
 }
